--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,13 +12,19 @@
         android:targetSdkVersion="18" />
 
     <application
+        android:name=".MyApp"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
+        android:label="TS Santa"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".ListActivity"
-            android:label="@string/app_name" >
+            android:name=".MainActivity"
+            android:configChanges="orientation|screenSize|keyboard"
+            android:label="TS Santa" >
+            
+        </activity>
+        <activity
+            android:name=".LoginActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -26,11 +32,12 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".LoginActivity"
-            android:label="@string/app_name" >
-            <intent-filter>
-            </intent-filter>
+            android:name=".ConstraintsActivity" >
         </activity>
+        <activity
+            android:name=".OldListActivity" >
+        </activity>
+        
     </application>
 
 </manifest>
